# q3-assignments

TravelDesignerAgent/: .gitignore  main.py  multi_agents.py  pyproject.toml  tools.py
TravelDesignerAgent/src/traveldesigneragent/: __init__.py
game-master-agent/: main.py  multi_agents.py  pyproject.toml  tools.py
multi-agent/: .env  .gitignore  main.py  multi_agents.py  pyproject.toml  tools.py
multi-agent/src/multi_agent/: __init__.py
